# ghost

./: Cargo.toml  README.md  about.html  history.txt  index.html
src/: db.rs  lib.rs
static/script/: index.js
static/style/: index.css
