[package]
name = "ghost"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
chrono = "0.4"
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[lib]
crate-type = ["cdylib"]
