[package]
name = "ghost"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[lib]
crate-type = ["cdylib"]
